# raytracer

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  PARTIAL_RERENDER.md  README.md  ROADMAP.md  output.ppm  raytracer3.sln  test-version.json
benchmarks/: PerformanceBenchmark.cpp
models/chess/: chess-set.json
raytracer/src/: Renderer.cpp  Renderer.h  main.cpp
raytracer/src/Acceleration/: Aabb.cpp  Aabb.h  Bvh.cpp  Bvh.h  SimdAabb.cpp  SimdAabb.h
raytracer/src/Diagnostics/: TraceStats.cpp  TraceStats.h
raytracer/src/Materials/: Bsdf.cpp  Bsdf.h  Material.cpp  Material.h
raytracer/src/Math/: Quaternion.cpp  Quaternion.h  Ray.h  Sampler.cpp  Sampler.h  Vec3.cpp  Vec3.h
raytracer/src/PostProcessing/: Denoiser.cpp  Denoiser.h
raytracer/src/Scene/: Camera.cpp  Camera.h  CameraState.h  Environment.cpp  Environment.h  Scene.cpp  Scene.h
raytracer/src/Scene/Light/: DirectionalSource.cpp  DirectionalSource.h  LightSource.cpp  LightSource.h  PointSource.cpp  PointSource.h  SpotSource.cpp  SpotSource.h
raytracer/src/SceneDescription/: JsonSceneLoader.cpp  JsonSceneLoader.h  LoadedScene.h
raytracer/src/Shapes/: Cube.cpp  Cube.h  HitRecord.h  Lathe.cpp  Lathe.h  MovingSphere.cpp  MovingSphere.h  ObjMesh.cpp  ObjMesh.h  Plane.cpp  Plane.h  Pyramid.cpp  Pyramid.h  Rectangle.cpp  Rectangle.h  RectangularPrism.cpp  RectangularPrism.h  RoundedBox.cpp  RoundedBox.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  SurfaceSample.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h
raytracer/src/Textures/: Texture.cpp  Texture.h
raytracer/src/Writer/: ImageWriter.cpp  ImageWriter.h
raytracer3/: raytracer3.vcxproj  raytracer3.vcxproj.filters
raytracer3/src/: Renderer.cpp  Renderer.h
raytracer3/src/Math/: Quaternion.h  Vec3.cpp  Vec3.h
raytracer3/src/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
raytracer3/src/Scene/Light/: LightSource.h  PointSource.cpp
raytracer3/src/Writer/: ImageWriter.cpp  ImageWriter.h
raytracer3/src/shapes/: Shape.cpp  Sphere.cpp  Sphere.h
scenes/: chessboard.json  demo.json  milestone10-lights.json  museum-exhibit.json  realism-showcase.json
tests/: RayTracerTests.cpp
